--- a/index.html
+++ b/index.html
@@ -5,5 +5,17 @@
 </head>
 <body>
 <h1>My Experience during MCO period</h1>
+<p>Assakamualaikum</p>
+
+<h2>My name is Safarina, i will write about my experience during MCO</h2>
+<p>During MCO, i spend the time that i have with my family very well</p>
+
+<h3>On my experience during MCO, my sister and i make a cupcake for our family</h3>
+
+<img src="image.png" width="200px" height="300px">
+
+<button><a href="http://www.nst.com.my">go to new straits times</a></button>
+
+
 </body>
 </html>
