--- a/index.html
+++ b/index.html
@@ -12,9 +12,21 @@
 
 <h3>On my experience during MCO, my sister and i make a cupcake for our family</h3>
 
-<img src="image.png" width="200px" height="300px">
+
+<a href="http://www.nst.com.my">go to new straits times</a>
+
+
+<img src="image.png" width="200px">
+<img src="images/image.png" height="300px">
 
 <button><a href="http://www.nst.com.my">go to new straits times</a></button>
+
+<ul>
+	<li>List 1</li>
+</ul>
+
+<ol>
+	<li>List 1</li>
 
 
 </body>
