--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 <button><a href="http://www.nst.com.my">go to new straits times</a></button>
 
 <ul>
-	<li>List 1</li>
+	<li>watching movie</li>
+	<li>cooking</li>
+	<li>doing an assignment</li>
 </ul>
 
 
