--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>My Experience during MCO period</h1>
-<p>Assakamualaikum</p>
+<p>Assalamualaikum</p>
 
 <h2>My name is Safarina, i will write about my experience during MCO</h2>
 <p>During MCO, i spend the time that i have with my family very well</p>
@@ -14,7 +14,7 @@
 
 
 
-<img src="image.png" width="200px">
+<img src="image.jpg" width="200px">
 
 <button><a href="http://www.nst.com.my">go to new straits times</a></button>
 
