--- a/myproject/index.html
+++ b/myproject/index.html
@@ -17,7 +17,7 @@
 
 <button><a href="https://www.google.com/search?q=gambar+cupcake&rlz=1C1GCEA_enMY879MY882&sxsrf=ALeKk02ciubqywWytEy7ItiL3oskMAE3fw:1587203255504&tbm=isch&source=iu&ictx=1&fir=ab9i4CkjG_44gM%253A%252CZf08kUsKH1cMMM%252C_&vet=1&usg=AI4_-kRVFmvXVrHMo8M8Ow72Y9QtUQ-m3g&sa=X&ved=2ahUKEwjG7uvx2PHoAhVWzjgGHVm0BkQQ9QEwCXoECAsQOg#imgrc=ab9i4CkjG_44gM&imgdii=2q_hG07SJztTXM">go to google</a></button>
 
-<img src="myproject/image.jpg" height="200px" width="200px">
+<img src="myproject/pic1.jpg" height="200px" width="200px">
 
 <h2>During mco, i always read about the CORONA VIRUS in news</h2>
 
